Navbar spacing fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,7 @@ html, body {
 ul.navbar-user {
   margin-top: 13px;
   margin-bottom: -6px;
+  height: 45px;
 }
 
 .navbar-subnav {
@@ -119,7 +120,7 @@ ul.navbar-user {
 
 .navbar-subnav .nav.nav-tabs {
   position: relative;
-  top: 20px;
+  top: 22px;
   left: 10px;
   border-bottom: 0;
   width: 225px;
